# nu_plugin_bio

./: .gitignore  Cargo.toml  README.md
example/: README.md
src/: bio.rs  lib.rs  main.rs
src/bio_format/: bam.rs  bcf.rs  bed.rs  cram.rs  fasta.rs  gfa.rs  gff.rs  mod.rs
src/nu/: mod.rs
tests/: drAilAlti1.fa  drAilAlti1.fa.fai  fasta_to_map.fa  generate_fasta_to_map.nu  map.bam  map.bcf  map.bed  map.cram  map.gfa  map.sam  map_sorted.bam  map_sorted.bam.bai  moo.cram  moo.sam  mt.sam  out.sam  run_tests.nu  t.bcf  t.vcf  test.fa  test.fasta  test.gff
