[package]
authors = ["Max Brown"]
description = "Parse and manipulate common bioinformatic formats in nushell."
repository = "https://github.com/"
edition = "2021"
license = "MIT"
name = "nu_plugin_bio"
version = "0.85.0"

[dependencies]
nu-plugin = { version = "0.85.0" }
nu-protocol = { version = "0.85.0", features = ["plugin"] }
# work from repo, as there are bug fixes in there which I raised, and are now fixed.
noodles = { version = "0.53.0", features = [
    "fasta",
    "fastq",
    "bam",
    "sam",
    "cram",
    "bcf",
    "vcf",
    "gff",
    "bgzf",
    "bed",
] }
gfa = "0.10.1"
bstr = "1.0.1"
